--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-# title                    : "Lorem ipsum"
+title                    : "Xiaoyuan Zhang's Homepage"
 # description              : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ornare aliquet ipsum, ac tempus justo dapibus sit amet. "
-# repository               : "RayeRen/acad-homepage.github.io"
+repository               : "https://glue25.github.io/"
 google_scholar_stats_use_cdn : true
 
 # google analytics
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Xiaoyuan Zhang"
-  avatar           : "images/android-chrome-512x512.png"
+  avatar           : "images/avatar.jpg"
   bio              : "Peking University"
   location         : "Beijing, China"
   employer         :
