--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Xiaoyuan Zhang's Homepage"
 # description              : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ornare aliquet ipsum, ac tempus justo dapibus sit amet. "
-repository               : "https://glue25.github.io/"
+# repository               : "https://glue25.github.io/"
 google_scholar_stats_use_cdn : true
 
 # google analytics
